fix bugs, refactoring system external users
